Updated converter function.

--- a/Converter/CMakeLists.txt
+++ b/Converter/CMakeLists.txt
@@ -31,6 +31,7 @@ set(${PROJECT_NAME}_SRCS
   igtlioStringConverter.cxx
   igtlioTransformConverter.cxx
   igtlioTrackingDataConverter.cxx
+  igtlioNDArrayConverter.cxx
   )
 
 set(${PROJECT_NAME}_HDRS
@@ -47,6 +48,7 @@ set(${PROJECT_NAME}_HDRS
   igtlioTransformConverter.h
   igtlioUsSectorDefinitions.h
   igtlioTrackingDataConverter.h
+  igtlioNDArrayConverter.h
   )
 
 IF(OpenIGTLink_ENABLE_VIDEOSTREAMING)
