Updated NDArrayDevice files, keep getting "this pointer" error.

--- a/Devices/CMakeLists.txt
+++ b/Devices/CMakeLists.txt
@@ -28,8 +28,10 @@ set(${PROJECT_NAME}_SRCS
   igtlioPolyDataDevice.cxx
   igtlioStatusDevice.cxx
   igtlioStringDevice.cxx
+  igtlioNDArrayDevice.cxx
   igtlioTransformDevice.cxx
   igtlioTrackingDataDevice.cxx
+
   )
 
 set(${PROJECT_NAME}_HDRS
@@ -41,6 +43,7 @@ set(${PROJECT_NAME}_HDRS
   igtlioPolyDataDevice.h
   igtlioStatusDevice.h
   igtlioStringDevice.h
+  igtlioNDArrayDevice.h
   igtlioTransformDevice.h
   igtlioTrackingDataDevice.h
   )
