--- a/Converter/CMakeLists.txt
+++ b/Converter/CMakeLists.txt
@@ -3,15 +3,18 @@ project(igtlioConverter)
 set(${PROJECT_NAME}_EXPORT_DIRECTIVE "OPENIGTLINKIO_CONVERTER_EXPORT")
 
 set(VTK_MODULES
-  vtkIOImage
-  vtkImagingMath
+  ${IGTLIO_MODULE_PREFIX}IOImage
+  ${IGTLIO_MODULE_PREFIX}ImagingMath
 )
 
 find_package(VTK REQUIRED NO_MODULE
   COMPONENTS
   ${VTK_MODULES}
   )
-include(${VTK_USE_FILE})
+  
+if(VTK_VERSION VERSION_LESS 8.9.0)
+  include(${VTK_USE_FILE})
+endif()
 
 set(${PROJECT_NAME}_INCLUDE_DIRECTORIES PUBLIC
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
