--- a/Tools/CMakeLists.txt
+++ b/Tools/CMakeLists.txt
@@ -4,9 +4,16 @@ set(${PROJECT_NAME}_EXPORT_DIRECTIVE "OPENIGTLINKIO_TOOLS_EXPORT")
 
 find_package(OpenIGTLink REQUIRED)
 include(${OpenIGTLink_USE_FILE})
-    
-find_package(VTK REQUIRED NO_MODULE COMPONENTS vtkIOXMLParser)
-include(${VTK_USE_FILE})
+
+set(VTK_MODULES
+  ${IGTLIO_MODULE_PREFIX}IOXMLParser
+)
+
+find_package(VTK REQUIRED NO_MODULE COMPONENTS ${VTK_MODULES})
+
+if(VTK_VERSION VERSION_LESS 8.9.0)
+  include(${VTK_USE_FILE})
+endif()
 
 set(${PROJECT_NAME}_INCLUDE_DIRECTORIES PUBLIC
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
