--- a/Logic/CMakeLists.txt
+++ b/Logic/CMakeLists.txt
@@ -3,15 +3,18 @@ project(igtlioLogic)
 set(${PROJECT_NAME}_EXPORT_DIRECTIVE "OPENIGTLINKIO_LOGIC_EXPORT")
 
 set(VTK_MODULES
-  vtkIOImage
-  vtkImagingMath
+  ${IGTLIO_MODULE_PREFIX}IOImage
+  ${IGTLIO_MODULE_PREFIX}ImagingMath
 )
 
 find_package(VTK REQUIRED NO_MODULE
   COMPONENTS
   ${VTK_MODULES}
   )
-include(${VTK_USE_FILE})
+
+if(VTK_VERSION VERSION_LESS 8.9.0)
+  include(${VTK_USE_FILE})
+endif()
 
 set(${PROJECT_NAME}_INCLUDE_DIRECTORIES PUBLIC
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
@@ -45,6 +48,7 @@ set(${PROJECT_NAME}_HDRS
 set(${PROJECT_NAME}_TARGET_LIBRARIES
   igtlioDevices
   ${OpenIGTLink_LIBRARIES}
+  ${IGTLIO_VTK_PREFIX}CommonSystem
   ${VTK_LIBRARIES}
   )
 
