COMP: Changes to enable compilation under VTK 9+

--- a/Devices/CMakeLists.txt
+++ b/Devices/CMakeLists.txt
@@ -5,6 +5,7 @@ set(${PROJECT_NAME}_EXPORT_DIRECTIVE "OPENIGTLINKIO_DEVICES_EXPORT")
 set(VTK_MODULES
   ${IGTLIO_MODULE_PREFIX}IOImage
   ${IGTLIO_MODULE_PREFIX}ImagingMath
+  ${IGTLIO_MODULE_PREFIX}CommonSystem
 )
 
 find_package(VTK REQUIRED NO_MODULE
