Several fixes to build with VTK 9.0.1 on Mac with GUI enabled and Video enabled.

--- a/Devices/CMakeLists.txt
+++ b/Devices/CMakeLists.txt
@@ -3,6 +3,7 @@ project(igtlioDevices)
 set(${PROJECT_NAME}_EXPORT_DIRECTIVE "OPENIGTLINKIO_DEVICES_EXPORT")
 
 set(VTK_MODULES
+  ${IGTLIO_MODULE_PREFIX}CommonSystem
   ${IGTLIO_MODULE_PREFIX}IOImage
   ${IGTLIO_MODULE_PREFIX}ImagingMath
 )
