--- a/Examples/qIgtlClient/CMakeLists.txt
+++ b/Examples/qIgtlClient/CMakeLists.txt
@@ -5,11 +5,13 @@ project(igtlioQtClient)
 # =========================================================
 find_package(VTK REQUIRED NO_MODULE
   COMPONENTS
-    vtkIOImage
-    vtkImagingMath
-    vtkGUISupportQt
+    ${IGTLIO_MODULE_PREFIX}IOImage
+    ${IGTLIO_MODULE_PREFIX}ImagingMath
+    ${IGTLIO_MODULE_PREFIX}GUISupportQt
   )
-include(${VTK_USE_FILE})
+if(VTK_VERSION VERSION_LESS 8.9.0)
+  include(${VTK_USE_FILE})
+endif()
 
 set(${PROJECT_NAME}_SRCS 
   main.cpp 
