Minor fix for project usage as a subproject of another cmake project
Fixes #90

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -179,7 +179,7 @@ install(EXPORT OpenIGTLinkIO
   FILE "OpenIGTLinkIOTargets.cmake"
   )
 
-install(FILES ${CMAKE_BINARY_DIR}/CMakeFiles/install/OpenIGTLinkIOConfig.cmake
+install(FILES ${CMAKE_CURRENT_BINARY_DIR}/CMakeFiles/install/OpenIGTLinkIOConfig.cmake
   DESTINATION "${OpenIGTLinkIO_PACKAGE_INSTALL}"
   COMPONENT CMakeFiles
   )
