Compile with Qt 6
* The macro SendMessage in winuser.h clashes with the method name in igtlioConnector. I would guess Qt6 now includes this somewhere where Qt5 wasn't. The cleaner way to resolve this would be to rename the SendMessage method to something unique, but this would require also changing every other application using OIGTLIO.

* * * * * * * * Use #pragma push/pop_macro to limit undesired side effects

* Remove Qt 4 support

Co-authored-by: Andras Lasso <lasso@queensu.ca>

--- a/Examples/qIgtlClient/CMakeLists.txt
+++ b/Examples/qIgtlClient/CMakeLists.txt
@@ -21,13 +21,12 @@ set(${PROJECT_NAME}_TARGET_LIBRARIES
   igtlioGUI
   )
 
-if(IGTLIO_QT_VERSION VERSION_GREATER "4")
+if(IGTLIO_QT_VERSION VERSION_EQUAL "5")
   find_package(Qt5 COMPONENTS Widgets REQUIRED)
   list(APPEND ${PROJECT_NAME}_TARGET_LIBRARIES Qt5::Widgets)
 else()
-  find_package(Qt4)
-  include(${QT_USE_FILE})
-  list(APPEND ${PROJECT_NAME}_TARGET_LIBRARIES Qt4::QtGui)
+  find_package(Qt6 COMPONENTS Widgets REQUIRED)
+  list(APPEND ${PROJECT_NAME}_TARGET_LIBRARIES Qt6::Widgets)
 endif()
 
 add_executable(${PROJECT_NAME} ${${PROJECT_NAME}_SRCS})
